# fast-api

./: .env-example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  README.md  pyproject.toml
api/app/db/: ._base.py  connection.py
api/app/migrations/versions/: b59076f6de9a_add_user_table.py
api/app/routes/: category_routes.py
api/app/schemas/: category.py  custom_base_model.py  product.py
api/app/test/: conftest.py
api/app/test/routes/: test_product_routes.py  test_user_routes.py
api/app/test/use_cases/: test_category_use_cases.py  test_product_use_case.py
api/app/use_cases/: poc.py
app/: .gitignore  main.py
app/db/: .gitignore  base.py  models.py
app/migrations/: env.py
app/migrations/versions/: 68d0c2d12154_add_category_and_products_tables.py
app/routes/: custom_pagination.py  deps.py  product_routes.py  user_routes.py
app/schemas/: product.py  user.py
app/test/routes/: test_category_routes.py  test_product_routes.py
app/test/schemas/: test_category_schema.py  test_product_schema.py  test_user_schema.py
app/test/use_cases/: test_product_use_case.py  test_user_use_cases.py
app/use_cases/: category.py  product.py  user.py
website/jinja2/: .env-example  .gitignore  README.md  docker-compose.yml  pyproject.toml
website/jinja2/app/: main.py  main.txt
website/jinja2/app/static/css/: styles.css
website/jinja2/app/templates/: _base.html  assinatura-aurora-sensual.html  assinatura-luxuria-premium.html  assinatura-olimpo-sensual.html  assinatura-personalize-extase.html  assinatura.html  index.html
